k8s/infrastructure/configs/weave-gitops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: flux-system
  labels:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:704855531002:certificate/efef05cc-420f-4dfa-8059-ed1045fe187a"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: "eks-fluxcd-lab-ui.bsisandbox.com"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: weave-gitops
            port:
              number: 9001
        path: /
        pathType: Prefix
